// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component 1`] = `
<div
  className="input"
>
  <label
    htmlFor="name"
  >
    Name
    <input
      autoComplete="off"
      id="name"
      name="name"
      onChange={[Function]}
      placeholder="Friend name"
      style={Object {}}
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`Input component currency, validation 1`] = `
<div
  className="input"
>
  <div
    className="currency"
  >
    €
  </div>
  <label
    htmlFor="name"
  >
    Name
    <input
      autoComplete="off"
      id="name"
      name="name"
      onChange={[Function]}
      placeholder="Friend name"
      style={
        Object {
          "borderColor": "#F1586B",
          "paddingLeft": "1rem",
        }
      }
      type="text"
      value=""
    />
  </label>
  <div
    className="error-msg"
  >
    Please enter a valid name
  </div>
</div>
`;
